# BasedAI

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  whitepaper-v2.md
.github/workflows/: contracts.yml  python.yml  typescript.yml
client/python/: pyproject.toml
client/python/basedai_client/: __init__.py  client.py  types.py
client/python/tests/: test_client.py
client/typescript/: README.md  package-lock.json  package.json  tsconfig.json
client/typescript/src/: abi.test.ts  abi.ts  client.ts  index.ts  receipt.test.ts  receipt.ts  types.ts
contracts/: README.md  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol  DeployMainnet.s.sol
contracts/src/governance/: BasedGovernor.sol
contracts/src/interfaces/: IBrainNFT.sol  IOptimismMintableERC721.sol  IRewardDistributor.sol  IScoringRegistry.sol  IStakingVault.sol  ISubnetRegistry.sol
contracts/src/market/: ComputeUnitMarket.sol
contracts/src/reward/: RewardDistributor.sol
contracts/src/scoring/: ScoringRegistry.sol
contracts/src/staking/: StakingVault.sol
contracts/src/subnet/: SubnetRegistry.sol
contracts/src/tokens/: BrainBridgeAdapter.sol  BrainNFT.sol  BrainNFTL2.sol
contracts/test/: AuditInvariants.t.sol  BlockerFixes.t.sol  BridgeAndDeployment.t.sol  EconomicLayer.t.sol  SecurityFixes.t.sol  StakingVault.t.sol  SubnetRegistry.t.sol
docs/: architecture.md  deployment.md  getting-started.md  tokenomics.md  validation-report.md
docs/audit/: audit-scope.md  deployment-manifest.template.json  privilege-matrix.md  threat-model.md
gateway/: pyproject.toml
gateway/src/basedai_gateway/: __init__.py  announce.py  cli.py  indexer.py  server.py
gateway/tests/: test_indexer.py  test_server.py
miner/: config.example.yaml  pyproject.toml
miner/src/basedai_miner/: __init__.py  cli.py  config.py  http_server.py  inference.py  p2p.py  receipts.py  runtime.py
miner/tests/: test_http_server.py  test_receipts.py
scripts/: check_overrides.py  check_solidity.py  devnet_e2e.py  gen_eval_set.py  generate_deployment_manifest.py
validator/: config.example.yaml  pyproject.toml
validator/src/basedai_validator/: __init__.py  aggregator.py  cli.py  commitment.py  config.py  merkle.py  runtime.py  scoring.py  service.py
validator/tests/: test_aggregator.py  test_commitment.py  test_merkle.py  test_scoring.py  test_service.py
