[project]
name = "basedai-miner"
version = "0.1.0"
description = "BasedAI reference miner — runs LLM inference and serves prompts via libp2p."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "vllm>=0.4",
    "py-libp2p>=0.2",
    "web3>=6.15",
    "eth-account>=0.11",
    "pydantic>=2.5",
    "structlog>=24.1",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
basedai-miner = "basedai_miner.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
