[project]
name = "basedai-validator"
version = "0.1.0"
description = "BasedAI reference validator — scores miners and posts epoch commitments."
requires-python = ">=3.10"
dependencies = [
    "web3>=6.15",
    "eth-account>=0.11",
    "pydantic>=2.5",
    "structlog>=24.1",
    "click>=8.1",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy ML / networking deps needed only for live operation (libp2p streams,
# transformer-based reference scoring). Imported lazily, so they stay out of the
# base install. Operators install them explicitly: `pip install -e '.[runtime]'`.
runtime = [
    "libp2p>=0.2",
    "scipy>=1.12",
    "transformers>=4.40",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
basedai-validator = "basedai_validator.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
