[project]
name = "basedai-client"
version = "0.1.0"
description = "BasedAI Python client — submit prompts, manage spending, query subnets."
requires-python = ">=3.10"
dependencies = [
    "web3>=6.15",
    "eth-account>=0.11",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["basedai_client*"]
